--- a/src/styles/components/_search.scss
+++ b/src/styles/components/_search.scss
@@ -1,6 +1,7 @@
 .search {
   background: $mediumGreen;
   padding: 0 0 $m-size 0;
+  margin-bottom: $xl-size;
   box-sizing: border-box;
   text-align: center;
 
