--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -4,9 +4,9 @@ html {
 }
 body {
   height: 100%;
-  font-family: Helvetica, Arial, sans-serif;
+  font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif;
   font-size: $m-size;
-  font-weight: 100;
+  font-weight: 300;
   background: $mainGreen;
   color: $lightGray;
   position: relative;
